[gd_scene load_steps=14 format=3 uid="uid://byhdaldj8daj8"]

[ext_resource type="Script" uid="uid://bc8juisrlafsk" path="res://setting/control.gd" id="1_cd5mh"]
[ext_resource type="Texture2D" uid="uid://cyeyy16cdeicr" path="res://texture/tilemaps/tilemap.png" id="2_00aq1"]
[ext_resource type="FontFile" uid="uid://dusp0mrhag7n3" path="res://fonts/pixel-anchor-jack_0.ttf" id="2_obdfc"]
[ext_resource type="FontFile" uid="uid://dye8dys757x60" path="res://fonts/PixeloidMono.ttf" id="3_00aq1"]
[ext_resource type="Script" uid="uid://dmyolwwm07gyj" path="res://setting/v_box_container.gd" id="4_1xere"]
[ext_resource type="AudioStream" uid="uid://cvswgyh81q3ji" path="res://sound/дзынь.mp3" id="5_xk6hv"]
[ext_resource type="Texture2D" uid="uid://bx2ojfsjjjdu1" path="res://texture/gems/bubble_gem.png" id="7_mljbr"]
[ext_resource type="Texture2D" uid="uid://othi0lit2wi6" path="res://texture/background_menu/Слой 3.png" id="10_p7ftj"]

[sub_resource type="Theme" id="Theme_obdfc"]

[sub_resource type="Animation" id="Animation_xk6hv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_mljbr"]
resource_name = "animation_end"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_1xere"]
resource_name = "animation_setting"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mljbr"]
_data = {
&"RESET": SubResource("Animation_xk6hv"),
&"animation_end": SubResource("Animation_mljbr"),
&"animation_setting": SubResource("Animation_1xere")
}

[node name="Settings" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = -183.0
offset_right = 254.0
offset_bottom = 183.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cd5mh")

[node name="dissolve_rect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -328.0
offset_top = -150.0
offset_right = 378.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.0823529)

[node name="Background" type="TextureRect" parent="."]
layout_mode = 2
offset_left = -43.0
offset_top = -15.0
offset_right = 551.0
offset_bottom = 385.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_00aq1")
expand_mode = 1

[node name="MMB" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 8
theme_override_fonts/font = ExtResource("2_obdfc")
theme_override_font_sizes/font_size = 50
text = "Настройки"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -77.5
offset_bottom = 107.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
script = ExtResource("4_1xere")

[node name="Sound button" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer"]
stream = ExtResource("5_xk6hv")
volume_db = -15.0
bus = &"Sound"

[node name="SoundRate" type="Timer" parent="MarginContainer/VBoxContainer/Sound button"]
wait_time = 0.05
one_shot = true

[node name="Master_Mute" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_00aq1")
theme_override_font_sizes/font_size = 25
button_pressed = true
text = " Общая громкость"

[node name="Volume_Master" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("7_mljbr")
theme_override_icons/grabber_highlight = ExtResource("7_mljbr")
theme_override_icons/grabber_disabled = ExtResource("10_p7ftj")
min_value = -40.0
max_value = 6.0
value = -40.0

[node name="Music_Mute" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_00aq1")
theme_override_font_sizes/font_size = 25
button_pressed = true
text = " Громкость музыки"

[node name="Volume_Music" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("7_mljbr")
theme_override_icons/grabber_highlight = ExtResource("7_mljbr")
theme_override_icons/grabber_disabled = ExtResource("10_p7ftj")
min_value = -40.0
max_value = 6.0
value = -10.0

[node name="Sound_Mute" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_00aq1")
theme_override_font_sizes/font_size = 25
button_pressed = true
text = " Громкость эффектов"

[node name="Volume_Sound" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("7_mljbr")
theme_override_icons/grabber_highlight = ExtResource("7_mljbr")
theme_override_icons/grabber_disabled = ExtResource("10_p7ftj")
min_value = -40.0
max_value = 6.0
value = -10.0

[node name="MenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -70.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme = SubResource("Theme_obdfc")
theme_type_variation = &"FlatButton"
theme_override_colors/font_hover_color = Color(0, 0, 0, 0.45098)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_00aq1")
theme_override_font_sizes/font_size = 50
text = "Назад"

[node name="AnimationSettings" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_mljbr")
}

[connection signal="toggled" from="MarginContainer/VBoxContainer/Master_Mute" to="." method="_on_master_mute_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume_Master" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Music_Mute" to="." method="_on_music_mute_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume_Music" to="." method="_on_volume_music_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Sound_Mute" to="." method="_on_sound_mute_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume_Sound" to="." method="_on_volume_sound_value_changed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
